Parse event_file instead, internal logic
Attempt to produce the same style as n.tkte.ch
for IRC notifications. Move announce logic into
notify_irc.py to handle massaging of messages.
Add ANSI colour to messages.

The max commits (8) could be an argument.

Signed-off-by: Jorgen Lundman <lundman@lundman.net>

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Notify IRC'
+name: 'Notify IRC Notifico'
 description: 'Send a notification message to an IRC channel'
 author: 'Andrew Wason'
 inputs:
@@ -25,8 +25,8 @@ inputs:
   sasl_password:
     description: 'IRC user SASL password'
     required: false
-  message:
-    description: 'Message to send'
+  eventpath:
+    description: 'path to EVENT_FILE'
     required: true
   notice:
     description: 'Use NOTICE instead of PRIVMSG'
@@ -38,6 +38,10 @@ inputs:
     required: false
   verbose:
     description: 'Enable verbose logging'
+    default: false
+    required: false
+  ansicolor:
+    description: 'Enable ansi color text'
     default: false
     required: false
 runs:
