Add MIRC color support
It appears to have higher compatibility than ANSI colors.

Move to v2 tag.

--- a/action.yml
+++ b/action.yml
@@ -44,6 +44,10 @@ inputs:
     description: 'Enable ansi color text'
     default: false
     required: false
+  mirccolor:
+    description: 'Enable mirc color text'
+    default: false
+    required: false
 runs:
   using: 'docker'
   image: 'Dockerfile'
